# papertrade

./: main.py  papertrade.db  pyproject.toml  test.py
app/: benchmark.py  cli.py  compare.py  config.py  db.py  engine.py  helpers.py  market_data.py  models.py  reports.py  screener.py  ui.py
